docker-demo/polaris-app/k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris-app-svc-c
spec:
  selector:
    app: polaris-app
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
