docker-demo/polaris-app/k8s/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris-app-svc
spec:
  type: NodePort
  selector:
    app: polaris-app
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
      nodePort: 30008
