docker-demo/polaris-app/k8s/polaris-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris-app-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: polaris-app
