docker-demo/polaris-app/k8s/polaris-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polaris-app
  labels:
    app: polaris-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polaris-app
  template:
    metadata:
      labels:
        app: polaris-app
    spec:
      containers:
        - name: polaris-app
          image: polaris952/polaris-app:latest
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: polaris-app-svc
spec:
  type: NodePort
  selector:
    app: polaris-app
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
      nodePort: 30008
