docker-demo/polaris-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris-app-service
spec:
  selector:
    app: polaris-app
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
