docker-demo/polaris-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polaris-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rewrite.bar.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polaris-app-service
                port:
                  number: 8090
